--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest numpy scipy
-      - name: Run tests
+      - name: Run tests  # 修改路径为当前目录（若测试文件在根目录）
         run: |
-          pytest tests/  # 假设测试文件在tests目录
+          pytest .  # 运行当前目录下的所有测试
