--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest numpy scipy
-      - name: Run tests  # 修改路径为当前目录（若测试文件在根目录）
+      - name: Run tests
         run: |
-          pytest .  # 运行当前目录下的所有测试
+          if [ -d "tests" ]; then
+            pytest tests/
+          else
+            echo "No tests directory found, skipping tests"
+          fi
