--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,18 @@
 name: Build and Test
-on: [push]
+on: [push]  # 推送代码时触发
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 使用GitHub的Ubuntu环境
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4  # 拉取代码
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: 3.11  # 指定Python版本
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest numpy scipy
+          pip install pytest numpy scipy  # 安装测试和科学计算库
       - name: Run tests
-        run: |
-          if [ -d "tests" ]; then
-            pytest tests/
-          else
-            echo "No tests directory found, skipping tests"
-          fi
+        run: pytest tests/  # 运行tests目录下的测试（后续创建）
